fix: turning off aom and dob causes large white space (#2466)

--- a/src/extension/features/budget/hide-age-of-money/index.css
+++ b/src/extension/features/budget/hide-age-of-money/index.css
@@ -1,4 +1,3 @@
-.budget-header-days:not(.toolkit-days-of-buffering) {
+.budget-header-days:not(.toolkit-days-of-buffering) div {
   display: none;
-  border-left: none;
 }
